--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@ li {
         
     </style>
 </head>
-<body background="C:\New folder\DA8224E9-56C1-4E04-A449-E4E5FF23A246.jpeg">
+<body background="https://github.com/AlphaBeta-123/homepage-done/blob/main/DA8224E9-56C1-4E04-A449-E4E5FF23A246.jpeg?raw=true">
 <body>
 
     <header>
